# AI_Gym

./: .gitignore  .~lock.bicep_curl_data.csv#  analyze_data.py  bicep_curl_data.csv  main.py  pyproject.toml
core/: __init__.py  pose_detector.py  rep_counter.py
ui/: __init__.py  video_display.py
utils/: __init__.py  angle_calculator.py  csv_logger.py
